# SPIDER

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt
outputs/: TCStencil_best_A100.csv
scripts/: Figure10_draw.py  Figure10_run.sh  Figure11_draw.py  Figure11_run.sh  Figure12_draw.py  Figure12_run.sh  build_SPIDER.sh  build_baseline.sh  extract_TCStencil_result.py
src/1d_half_sparse/: CMakeLists.txt  gpu_7r_half.cu  gpu_7r_half.h  vector_reduction_half.cu
src/2d_half_dense/: 2d_stencil_half_dense.cu  CMakeLists.txt  gpu_2d_7r_half_dense.cu  gpu_2d_7r_half_dense.h
src/2d_half_sparse/: 2d_stencil_half.cu  CMakeLists.txt  gpu_2d_7r_half.cu
src/2d_half_sparse_for_ablation/: 2d_stencil_half.cu  CMakeLists.txt  gpu_2d_7r_half.cu
